<resources>
    <string name="app_name">DrawCircles</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="mode">Mode</string>
    <string name="color">Color</string>
    <string name="insert">Insert</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="black">Black</string>
</resources>
